<resources>
    <string name="app_name">Lab 4 App 1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_grades">DisplayGrades</string>
    <string name="studentName">Name:</string>
    <string name="test1">Test 1:</string>
    <string name="test2">Test 2:</string>
    <string name="test3">Test 3:</string>
    <string name="finalGrade">Final:</string>
    <string name="totalGrade">Total Grade:</string>
    <string name="backButton">Back </string>
</resources>
